--- a/.github/workflows/pipeline-petclinic.yml
+++ b/.github/workflows/pipeline-petclinic.yml
@@ -14,12 +14,12 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Generate docker images
-      run : mvn spring-boot:build-image --file pom.xml -X -Pk8s -DREPOSITORY_PREFIX=elfiadylclc
+      run : mvn spring-boot:build-image --file pom.xml -X -Pk8s -DREPOSITORY_PREFIX=adjouder
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME_EL }}
-        password: ${{ secrets.DOCKER_PASSWORD_EL }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     - name: push docker images
       run : ./scripts/pushImages.sh
 
@@ -38,12 +38,12 @@ jobs:
       #run: aws eks update-kubeconfig --name petclinic_cluster
       run: |
         pwd & ls
-        cat ./k8s/*.yaml | sed 's#\${REPOSITORY_PREFIX_EL}'"#${REPOSITORY_PREFIX_EL}#g" | > deploy.yaml
+        cat ./k8s/*.yaml | sed 's#\${REPOSITORY_PREFIX}'"#${REPOSITORY_PREFIX}#g" | > deploy.yaml
 
     - name: clean namespace 
       uses: kodermax/kubectl-aws-eks@main
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
           delete --all pods --namespace=spring-petclinic
@@ -51,7 +51,7 @@ jobs:
     - name: Initialization of namespace EKS
       uses: kodermax/kubectl-aws-eks@main
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
           apply -f k8s/init-namespace/
@@ -60,7 +60,7 @@ jobs:
     #- name: Creation des secrets Amazon EKS
      # uses: kodermax/kubectl-aws-eks@main
       #env:
-       #  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+       #  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       #with:
       #  args: |
        #   create secret generic wavefront -n spring-petclinic --from-literal=wavefront-url=https://wavefront.surf --from-literal=wavefront-api-token=7380ef8d-a2ce-40a7-85b8-70d9d3fab32d
@@ -68,7 +68,7 @@ jobs:
     - name: Initialization of deployment Amazon EKS
       uses: kodermax/kubectl-aws-eks@main
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
           apply -f k8s/
@@ -76,7 +76,7 @@ jobs:
     - name: add conf kub
       uses: kodermax/kubectl-aws-eks@main
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
           config view --raw >~/.kube/config
@@ -84,7 +84,7 @@ jobs:
     - name: Settings up databases with helm install repo
       uses: WyriHaximus/github-action-helm3@v3
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
           args: |
             repo add bitnami https://charts.bitnami.com/bitnami &&  repo update &&
@@ -95,7 +95,7 @@ jobs:
     - name: Initialization of services Amazon EKS
       uses: kodermax/kubectl-aws-eks@main
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
           apply -f k8s/init-services
@@ -103,7 +103,7 @@ jobs:
     - name: get api 
       uses: kodermax/kubectl-aws-eks@main
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_EL }}
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
           get svc -n spring-petclinic api-gateway 
