--- a/.github/workflows/pipeline-petclinic-build.yml
+++ b/.github/workflows/pipeline-petclinic-build.yml
@@ -7,10 +7,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
+      env:
+        REPOSITORY_PREFIX: ${{ secrets.REPOSITORY_PREFIX }}
       with:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
+    - name: Packaging with Maven
+      run: mvn -B package --file pom.xml
     - name: Build Services & générer les images docker
       run: mvn spring-boot:build-image --file pom.xml -X  -DREPOSITORY_PREFIX=${REPOSITORY_PREFIX}
 
