--- a/.github/workflows/pipeline-petclinic-build.yml
+++ b/.github/workflows/pipeline-petclinic-build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Packaging with Maven
       run: mvn -B package --file pom.xml
     - name: Build Services & générer les images docker
-      run: mvn spring-boot:build-image --file pom.xml -X  -DREPOSITORY_PREFIX=${REPOSITORY_PREFIX}
+      run: mvn spring-boot:build-image --file pom.xml -X  -Pk8s -DREPOSITORY_PREFIX=${REPOSITORY_PREFIX}
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
