--- a/.github/workflows/pipeline-petclinic-build.yml
+++ b/.github/workflows/pipeline-petclinic-build.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       env:
-        REPOSITORY_PREFIX: ${{ secrets.REPOSITORY_PREFIX }}
+        REPOSITORY_PREFIX: ${{ vars.REPOSITORY_PREFIX }}
       with:
         java-version: '11'
         distribution: 'adopt'
