--- a/.github/workflows/pipeline-petclinic-build.yml
+++ b/.github/workflows/pipeline-petclinic-build.yml
@@ -4,11 +4,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Use variables
+      run: |
+        echo "repository variable : $REPOSITORY_PREFIX"
+        echo "TF_API_TOKEN variable : $TF_API_TOKEN"
+        echo "variable from shell environment : $env_var"
+      env:
+        REPOSITORY_VAR: ${{ vars.REPOSITORY_PREFIX }}
+        ORGANIZATION_VAR: ${{ vars.TF_API_TOKEN }}
+        OVERRIDE_VAR: ${{ vars.OVERRIDE_VAR }}
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       env:
         REPOSITORY_PREFIX: ${{ vars.REPOSITORY_PREFIX }}
+        REPOSITORY_PREFIX1: ${{ env.REPOSITORY_PREFIX }}
+        REPOSITORY_PREFIX2: $REPOSITORY_PREFIX
       with:
         java-version: '11'
         distribution: 'adopt'
