--- a/.github/workflows/pipeline-petclinic-build.yml
+++ b/.github/workflows/pipeline-petclinic-build.yml
@@ -25,9 +25,14 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Packaging with Maven
-      run: mvn -B package --file pom.xml
+      run: |
+        echo "repository variable : $REPOSITORY_PREFIX"
+        mvn -B package --file pom.xml
     - name: Build Services & générer les images docker
-      run: mvn spring-boot:build-image --file pom.xml -X  -Pk8s -DREPOSITORY_PREFIX=${REPOSITORY_PREFIX}
+      run: |
+        echo "repository variable : $REPOSITORY_PREFIX"
+        echo "repository variable : ${{ vars.REPOSITORY_PREFIX }}"
+        mvn spring-boot:build-image --file pom.xml -X  -Pk8s -DREPOSITORY_PREFIX=${{ vars.REPOSITORY_PREFIX }}
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
