--- a/.github/workflows/pipeline-petclinic-build.yml
+++ b/.github/workflows/pipeline-petclinic-build.yml
@@ -4,33 +4,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Use variables
-      run: |
-        echo "repository variable : $REPOSITORY_PREFIX"
-        echo "TF_API_TOKEN variable : $TF_API_TOKEN"
-        echo "variable from shell environment : $env_var"
-      env:
-        REPOSITORY_VAR: ${{ vars.REPOSITORY_PREFIX }}
-        ORGANIZATION_VAR: ${{ vars.TF_API_TOKEN }}
-        OVERRIDE_VAR: ${{ vars.OVERRIDE_VAR }}
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       env:
         REPOSITORY_PREFIX: ${{ vars.REPOSITORY_PREFIX }}
-        REPOSITORY_PREFIX1: ${{ env.REPOSITORY_PREFIX }}
-        REPOSITORY_PREFIX2: $REPOSITORY_PREFIX
       with:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
     - name: Packaging with Maven
-      run: |
-        echo "repository variable : $REPOSITORY_PREFIX"
-        mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml
     - name: Build Services & générer les images docker
       run: |
-        echo "repository variable : $REPOSITORY_PREFIX"
         echo "repository variable : ${{ vars.REPOSITORY_PREFIX }}"
         mvn spring-boot:build-image --file pom.xml -X  -Pk8s -DREPOSITORY_PREFIX=${{ vars.REPOSITORY_PREFIX }}
 
@@ -40,4 +26,6 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: push docker images
-      run : ./scripts/pushImages.sh
+      run : |
+        echo "exécution de la commande : ./scripts/pushImages.sh ${{ vars.REPOSITORY_PREFIX }}"
+        ./scripts/pushImages.sh ${{ vars.REPOSITORY_PREFIX }}
