--- a/.github/workflows/pipeline-petclinic-deploy.yml
+++ b/.github/workflows/pipeline-petclinic-deploy.yml
@@ -1,30 +1,9 @@
 name: Petclinic CI
-on:
-  pull_request:
-    branches: [ "main" ]
+on: [push]
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Generate docker images
-      run : mvn spring-boot:build-image --file pom.xml -X -Pk8s -DREPOSITORY_PREFIX=adjouder
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: push docker images
-      run : ./scripts/pushImages.sh
-
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -41,31 +20,33 @@ jobs:
       run: |
         pwd & ls
         cat ./k8s/*.yaml | sed 's#\${REPOSITORY_PREFIX}'"#${REPOSITORY_PREFIX}#g" | > deploy.yaml
+        cat deploy.yaml 
 
-    - name: clean namespace 
-      uses: kodermax/kubectl-aws-eks@main
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-      with:
-        args: |
-          delete --all pods --namespace=spring-petclinic
-          
     - name: Initialization of namespace EKS
       uses: kodermax/kubectl-aws-eks@main
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
-          apply -f k8s/init-namespace/
+          get ns spring-petclinic || kubectl create ns spring-petclinic # create namespace if not exists
 
-    # il faut le faire uen seule fois pet-être pas dans un pipline ou alors vérifier l'existance avant
-    #- name: Creation des secrets Amazon EKS
-     # uses: kodermax/kubectl-aws-eks@main
-      #env:
-       #  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-      #with:
-      #  args: |
-       #   create secret generic wavefront -n spring-petclinic --from-literal=wavefront-url=https://wavefront.surf --from-literal=wavefront-api-token=7380ef8d-a2ce-40a7-85b8-70d9d3fab32d
+    - name: Création des secrets maps
+      uses: kodermax/kubectl-aws-eks@main
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+      with:
+        args: |
+          delete secret db-secret-customers-service -n spring-petclinic --ignore-not-found
+          create secret generic db-secret-customers-service --from-literal=password=petclinic -n spring-petclinic
+          #create secret generic db-secret-customers-service --from-literal=password=$DB_PASSWORD_CUSTOMERS -n spring-petclinic
+          
+          delete secret db-secret-visits-service -n spring-petclinic --ignore-not-found
+          create secret generic db-secret-visits-service --from-literal=password=petclinic -n spring-petclinic
+          #create secret generic db-secret-visits-service --from-literal=password=$DB_PASSWORD_VISITS -n spring-petclinic
+
+          delete secret db-secret-visits-service -n spring-petclinic --ignore-not-found
+          create secret generic db-secret-visits-service --from-literal=password=petclinic -n spring-petclinic
+          #create secret generic db-secret-visits-service --from-literal=password=$DB_PASSWORD_VISITS -n spring-petclinic
 
     - name: Initialization of deployment Amazon EKS
       uses: kodermax/kubectl-aws-eks@main
@@ -83,17 +64,6 @@ jobs:
         args: |
           config view --raw >~/.kube/config
           
-    - name: Settings up databases with helm install repo
-      uses: WyriHaximus/github-action-helm3@v3
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-      with:
-          args: |
-            repo add bitnami https://charts.bitnami.com/bitnami &&  repo update &&
-            install vets-db-mysql bitnami/mysql --namespace spring-petclinic --version 9.14.4 --set auth.database=service_instance_db &&
-            install visits-db-mysql bitnami/mysql --namespace spring-petclinic  --version 9.14.4 --set auth.database=service_instance_db
-            &&  install customers-db-mysql bitnami/mysql --namespace spring-petclinic  --version 9.14.4 --set auth.database=service_instance_db
-              
     - name: Initialization of services Amazon EKS
       uses: kodermax/kubectl-aws-eks@main
       env:
@@ -101,7 +71,7 @@ jobs:
       with:
         args: |
           apply -f k8s/init-services
-
+@
     - name: get api 
       uses: kodermax/kubectl-aws-eks@main
       env:
