--- a/.github/workflows/pipeline-petclinic-deploy.yml
+++ b/.github/workflows/pipeline-petclinic-deploy.yml
@@ -36,7 +36,7 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
-          apply -f k8s/init-secrets
+          apply -f k8s/init-secrets/*.yaml
 
     - name: Initialization of deployment Amazon EKS
       uses: kodermax/kubectl-aws-eks@main
