--- a/.github/workflows/pipeline-petclinic-deploy.yml
+++ b/.github/workflows/pipeline-petclinic-deploy.yml
@@ -50,7 +50,7 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
-          apply -f ./k8s/
+          kubectl apply -f k8s/
 
     - name: add conf kub
       uses: kodermax/kubectl-aws-eks@main
@@ -66,7 +66,7 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
-          apply -f ./k8s/init-services
+          kubectl apply -f k8s/init-services
 
     - name: get api 
       uses: kodermax/kubectl-aws-eks@main
