mise à jour du déploiement

--- a/.github/workflows/pipeline-petclinic-deploy.yml
+++ b/.github/workflows/pipeline-petclinic-deploy.yml
@@ -30,9 +30,8 @@ jobs:
       with:
         args: |
           get ns spring-petclinic || kubectl create ns spring-petclinic # create namespace if not exists
-          
 
-    - name: Initialization of services Amazon EKS
+    - name: Initialization of secrets
       uses: kodermax/kubectl-aws-eks@main
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
@@ -51,7 +50,7 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
-          kubectl apply -f k8s/
+          apply -f k8s/
 
     - name: add conf kub
       uses: kodermax/kubectl-aws-eks@main
@@ -67,7 +66,7 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
         args: |
-          kubectl apply -f k8s/init-services
+          apply -f k8s/init-services
 
     - name: get api 
       uses: kodermax/kubectl-aws-eks@main
