--- a/k8s/customers-service-deployment.yaml
+++ b/k8s/customers-service-deployment.yaml
@@ -49,9 +49,9 @@ spec:
         - name: SPRING_DATASOURCE_URL
           value: jdbc:mysql://customers-db-mysql.spring-petclinic.svc.cluster.local:3306/service_instance_db?queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=customers-db
         - name: SPRING_DATASOURCE_USERNAME
-          value: root
+          value: petclinic
         - name: SPRING_DATASOURCE_PASSWORD
-          value: test
+          value: petclinic
         - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
           value: proxy://wavefront-proxy.spring-petclinic.svc.cluster.local:2878
         ports:
