--- a/.github/workflows/pipeline-petclinic-deploy.yml
+++ b/.github/workflows/pipeline-petclinic-deploy.yml
@@ -42,7 +42,7 @@ jobs:
           kubectl delete secret db-secret-visits-service -n spring-petclinic --ignore-not-found
           kubectl create secret generic db-secret-visits-service --from-literal=password=petclinic -n spring-petclinic
           kubectl delete secret db-secret-vets-service -n spring-petclinic --ignore-not-found
-          kubectl create secret generic db-vets-service --from-literal=password=petclinic -n spring-petclinic
+          kubectl create secret generic db-secret-vets-service --from-literal=password=petclinic -n spring-petclinic
 
     - name: Initialization of deployment Amazon EKS
       uses: kodermax/kubectl-aws-eks@main
