suppression de l'application wavefront

--- a/k8s/init-services/02-config-map.yaml
+++ b/k8s/init-services/02-config-map.yaml
@@ -16,10 +16,10 @@ data:
         mime-types: application/json,text/css,application/javascript
         min-response-size: 2048
 
-    wavefront:
-      application:
-        name: spring-petclinic-k8s
-      freemium-account: true
+    #wavefront:
+     # application:
+      #  name: spring-petclinic-k8s
+      #freemium-account: true
 
     # Logging
     logging.level.org.springframework: INFO
