--- a/k8s/customers-service-deployment.yaml
+++ b/k8s/customers-service-deployment.yaml
@@ -52,8 +52,8 @@ spec:
           value: petclinic
         - name: SPRING_DATASOURCE_PASSWORD
           value: petclinic
-        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
-          value: proxy://wavefront-proxy.spring-petclinic.svc.cluster.local:2878
+        #- name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
+         # value: proxy://wavefront-proxy.spring-petclinic.svc.cluster.local:2878
         ports:
         - containerPort: 8080
         resources: {}
