--- a/k8s/visits-service-deployment.yaml
+++ b/k8s/visits-service-deployment.yaml
@@ -55,8 +55,8 @@ spec:
              secretKeyRef:
                name: db-secret-visits-service
                key: password
-        - name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
-          value: proxy://wavefront-proxy.spring-petclinic.svc.cluster.local:2878
+        #- name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
+         # value: proxy://wavefront-proxy.spring-petclinic.svc.cluster.local:2878
         ports:
         - containerPort: 8080
         resources: {}
