--- a/k8s/customers-service-deployment.yaml
+++ b/k8s/customers-service-deployment.yaml
@@ -47,13 +47,14 @@ spec:
         - name: SPRING_PROFILES_ACTIVE
           value: kubernetes,mysql
         - name: SPRING_DATASOURCE_URL
-          value: jdbc:mysql://customers-db-mysql.spring-petclinic.svc.cluster.local:3306/service_instance_db?queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=customers-db
+          value: jdbc:mysql://mysql:3306/service_instance_db
         - name: SPRING_DATASOURCE_USERNAME
           value: petclinic
         - name: SPRING_DATASOURCE_PASSWORD
-          value: petclinic
-        #- name: MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI
-         # value: proxy://wavefront-proxy.spring-petclinic.svc.cluster.local:2878
+          valueFrom:
+            secretKeyRef:
+              name: db-secret-customers-service
+              key: password
         ports:
         - containerPort: 8080
         resources: {}
