suppression de l'appli wavefront

--- a/k8s/init-services/02-config-map.yaml
+++ b/k8s/init-services/02-config-map.yaml
@@ -15,10 +15,10 @@ data:
         enabled: true
         mime-types: application/json,text/css,application/javascript
         min-response-size: 2048
-
-    #wavefront:
-     # application:
-      #  name: spring-petclinic-k8s
+        
+        #wavefront:
+        #application:
+        #name: spring-petclinic-k8s
       #freemium-account: true
 
     # Logging
@@ -53,7 +53,7 @@ data:
             enabled: true
 
     customers-service-id: http://customers-service.spring-petclinic.svc.cluster.local:8080
-    visits-service-id: http://vists-service.spring-petclinic.svc.cluster.local:8080
+    visits-service-id: http://visits-service.spring-petclinic.svc.cluster.local:8080
 
     spring:
       datasource:
@@ -85,12 +85,12 @@ data:
           ribbon:
             enabled: false
         gateway:
-          x-forwarded:  
-            enabled: true 
-            for-enabled: true 
-            proto-enabled: true 
-            host-append: false  
-            port-append: false  
+          x-forwarded:
+            enabled: true
+            for-enabled: true
+            proto-enabled: true
+            host-append: false
+            port-append: false
             proto-append: false
           routes:
             - id: vets-service
@@ -115,4 +115,3 @@ data:
       cache:
         ttl: 60
         heap-size: 101
-
