--- a/spring-petclinic-customers-service/pom.xml
+++ b/spring-petclinic-customers-service/pom.xml
@@ -135,13 +135,13 @@
 				<scope>import</scope>
 			</dependency>
 
-			<dependency>
+			<!--<dependency>
 				<groupId>com.wavefront</groupId>
 				<artifactId>wavefront-spring-boot-bom</artifactId>
 				<version>${wavefront.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
+			</dependency>-->
 
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
