modification du endoint bdd

--- a/k8s/init-services/02-config-map.yaml
+++ b/k8s/init-services/02-config-map.yaml
@@ -45,12 +45,12 @@ data:
         web:
           exposure:
             include: '*'
-      metrics:
-        export:
-          prometheus:
-            enabled: true
-          wavefront:
-            enabled: true
+      #metrics:
+       # export:
+        #  prometheus:
+         #   enabled: true
+          #wavefront:
+           # enabled: true
 
     customers-service-id: http://customers-service.spring-petclinic.svc.cluster.local:8080
     visits-service-id: http://visits-service.spring-petclinic.svc.cluster.local:8080
