--- a/spring-petclinic-api-gateway/src/main/resources/bootstrap.yml
+++ b/spring-petclinic-api-gateway/src/main/resources/bootstrap.yml
@@ -8,8 +8,8 @@ spring:
 management:
   metrics:
     export:
-      wavefront:
-        apiToken: ""
+#      wavefront:
+ #       apiToken: ""
 ---
 spring:
   config:
