--- a/k8s/visits-service-deployment.yaml
+++ b/k8s/visits-service-deployment.yaml
@@ -46,8 +46,7 @@ spec:
         - name: SPRING_PROFILES_ACTIVE
           value: kubernetes,mysql
         - name: SPRING_DATASOURCE_URL
-          value: visit-db.c0dng319gujr.eu-west-3.rds.amazonaws.com:3306/service_instance_db
-          #value: jdbc:mysql://visits-db-mysql.spring-petclinic.svc.cluster.local:3306/service_instance_db?queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=visits-db
+          value: jdbc:mysql://visit-db.c0dng319gujr.eu-west-3.rds.amazonaws.com:3306/service_instance_db
         - name: SPRING_DATASOURCE_USERNAME
           value: petclinic
         - name: SPRING_DATASOURCE_PASSWORD
